<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>rosgraph</name>
  <version>1.14.10</version>
  <description>
    rosgraph contains the rosgraph command-line tool, which prints
    information about the ROS Computation Graph. It also provides an
    internal library that can be used by graphical tools.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rosgraph</url>
  <url type="bugtracker">https://github.com/ros/ros_comm/issues</url>
  <url type="repository">https://github.com/ros/ros_comm</url>
  <author>Ken Conley</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <exec_depend>python-netifaces</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <test_depend>python-mock</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
